WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242693
[iOS] Fix thread safety issues when printing on a background thread
https://bugs.webkit.org/show_bug.cgi?id=242693
Summary
[iOS] Fix thread safety issues when printing on a background thread
Aditya Keerthi
Reported
2022-07-13 09:00:34 PDT
rdar://93749291
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-07-13 09:11:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2365
EWS
Comment 2
2022-07-19 08:59:17 PDT
Committed
252602@main
(7ab1a7bb64d8): <
https://commits.webkit.org/252602@main
> Reviewed commits have been landed. Closing PR #2365 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug