Cherry-pick 7ab1a7bb64d8. rdar://problem/93749291

[iOS] Fix thread safety issues when printing on a background thread
    https://bugs.webkit.org/show_bug.cgi?id=242693
    rdar://93749291

    Reviewed by Chris Dumez and Devin Rousso.

    In iOS 16, UIKit added support for performing printing on a background thread
    when using a UIPrintInteractionController. WebKit opts-in to background thread
    printing when printing a web page, in order to avoid blocking the UI process.

    Printing on a background thread means that the page count computation and drawing
    are done off main thread. UIViewPrintFormatters must still be used on a single thread.

    However, the existing logic has a couple of notable thread-safety issues:

    1. Unsafe use of WebPageProxy in WKContentView (_WKWebViewPrintFormatter):

    To fix this issue, all uses of `_page` are now performed on the main thread,
    using `callOnMainRunLoop` and `ensureOnMainRunLoop`.

    2. Unsynchronized, shared state representing the current print job on WKContentView:

    WKContentView currently maintains a single printed document and a single
    completion semaphore, even though multiple print jobs can be ongoing. There is
    no synchronization between print jobs, which can result in multiple threads
    reading and writing to the same variables representing the printing state.

    Multiple background print jobs can be triggered using SPI, while a print job
    on the main thread and a single background thread can be triggered using API.
    In order to address the current thread-safety issues in this scenario, print
    state is now maintained per-_WKWebViewPrintFormatter.

    WKContentView maintains a set of waiting print formatters, in order to unblock
    them should the web process get terminated.

    * Source/WebKit/UIProcess/_WKWebViewPrintFormatter.mm:
    (-[_WKWebViewPrintFormatter _printedDocument]):

    Add a wrapper method to retrieve the printed document, ensuring the lock is
    held.

    (-[_WKWebViewPrintFormatter _setPrintedDocument:]):

    Notify the waiting thread once the printed document has been retrieved.

    (-[_WKWebViewPrintFormatter _waitForPrintedDocument]):
    (-[_WKWebViewPrintFormatter _recalcPageCount]):
    (-[_WKWebViewPrintFormatter drawInRect:forPageAtIndex:]):
    * Source/WebKit/UIProcess/_WKWebViewPrintFormatterInternal.h:

    Change `_wk_printedDocument` into `_wk_requestDocumentForPrintFormatter` as the
    print formatter now contains state necessary for waiting.

    * Source/WebKit/UIProcess/ios/WKContentView.mm:
    (-[WKContentView _resetPrintingState]):

    Wake up blocked print formatting threads as necessary.

    (-[WKContentView _processDidExit]):
    (-[WKContentView _frameIdentifierForPrintFormatter:]):

    Factor out frame identifier retrieval into a common method to ensure it is
    done on the main thread.

    (-[WKContentView _wk_pageCountForPrintFormatter:]):

    Move the frame identifier retrieval next to the page count computation and
    perform the logic on the main thread.

    `_page` can (incorrectly) be used off the main thread. To fix this, use
    `ensureOnMainRunLoop` prior to calling WebPageProxy::drawToPDFiOS. Once the
    PDF is retrieved, the background thread is woken up.

    If printing on a background thread, add the print formatter to the pending set.

    (-[WKContentView _waitForDrawToPDFCallbackForPrintFormatterIfNeeded:]):

    Use the callback ID when printing on the main thread. On background threads,
    consult the set of pending print formatters and wait as necessary.

    (-[WKContentView _wk_requestDocumentForPrintFormatter:]):
    (-[WKContentView _waitForDrawToPDFCallbackIfNeeded]): Deleted.
    (-[WKContentView _wk_printedDocument]): Deleted.
    * Source/WebKit/UIProcess/ios/WKPDFView.mm:
    (-[WKPDFView _wk_requestDocumentForPrintFormatter:]):
    (-[WKPDFView _wk_printedDocument]): Deleted.
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewPrintFormatter.mm:
    (TEST):

    Added new tests to exercise the multiple background threads scenario, and the
    main thread and single background thread scenario.

    Canonical link: https://commits.webkit.org/252602@main

Canonical link: https://commits.webkit.org/252432.42@safari-7614-branch